# SecAgent

./: .gitignore  README.md  pyproject.toml
config/: llm.toml
data/input/: example.json  example_1.json  example_5.json
data/result/: result.json  result_623.json  result_example.json
doc/: Architecture.md  DEEPAUDIT_ALIGNMENT.md
src/app/api/v1/endpoints/: agent_tasks.py
src/app/core/: config.py
src/app/services/agent/: config.py
src/app/services/agent/agents/: analysis.py  base.py  orchestrator.py  recon.py  verification.py
src/app/services/agent/core/: __init__.py  executor.py  state.py
src/app/services/agent/knowledge/: __init__.py
src/app/services/agent/tools/: __init__.py  base.py  code_analysis_tool.py  file_tool.py  run_code.py  sandbox_tool.py
src/app/services/llm/: types.py
src/secagent/: __init__.py  agent_runner.py  cli.py  cve_parser.py  deepaudit_adapter.py  models.py  pipeline.py
src/secagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
