[project]
name = "secagent"
version = "0.1.0"
description = "CVE-guided directed vulnerability agent"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "litellm>=1.52.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "json-repair>=0.30.0",
  "docker"
]

[project.scripts]
secagent = "secagent.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
